added entry for the migration of invalid dc-data streams
git-svn-id: http://escidev5.fiz-karlsruhe.de:8888/prototype/branches/eSciDocCoreAdmin/1.1/eSciDocCoreAdmin/@32385 5c398c58-3d0a-0410-a38c-d0825f6816e0